Updated landing page, fixed response/align, added icons and map

--- a/index.css
+++ b/index.css
@@ -31,16 +31,15 @@ body{
 .background{
 	background-image: url(./images/webDevBG.jpg);
 	background-repeat: no-repeat;
-	background-size: 100%;
-	background-position: top;
+	background-size: cover;
+	background-position: center center;
 	background-attachment: scroll;
-	min-height: 40rem;
+	min-height: 100vh;
 }
 
 .front-bg{
 	background-color: rgba(0, 0, 0, 0.25);
-	min-height: 40rem;
-	color: white;
+	min-height: 100vh;
 }
 
 .fontColor{
